# lifearchivist

./: .dockerignore  .env.example  .flake8  .gitignore  COMMANDS.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  Procfile.dev  README.md  RESULT_TYPE_MIGRATION_GUIDE.md  RESULT_TYPE_MIGRATION_STATUS.md  SYSTEM_DEPENDENCIES.md  configuration.html  dev.py  docker-compose.dev.yml  docker-compose.yml  genindex.html  index.html  installation.html  justfile  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  sonar-project.properties
.github/workflows/: ci.yml  claude.yml  docs.yml  lint.yml  release.yml  security.yml  sonarqube.yml  test-integration.yml  test-live.yml  test-unit.yml
_modules/: index.html
_sources/: configuration.rst.txt
_sources/api/: lifearchivist.config.rst.txt  lifearchivist.rst.txt  lifearchivist.schemas.rst.txt  lifearchivist.storage.llamaindex_service.rst.txt  lifearchivist.storage.rst.txt  lifearchivist.tools.extract.rst.txt  lifearchivist.tools.llamaindex.rst.txt
_sources/usage/: ai-features.rst.txt  overview.rst.txt  search.rst.txt
api/: lifearchivist.agents.html  lifearchivist.config.html  lifearchivist.html  lifearchivist.models.html  lifearchivist.schemas.html  lifearchivist.server.api.html  lifearchivist.server.api.routes.html  lifearchivist.server.html  lifearchivist.storage.html  lifearchivist.storage.llamaindex_service.html  lifearchivist.storage.vault.html  lifearchivist.tools.date_extract.html  lifearchivist.tools.extract.html  lifearchivist.tools.file_import.html  lifearchivist.tools.html  lifearchivist.tools.llamaindex.html  lifearchivist.tools.ollama.html  lifearchivist.tools.search.html  lifearchivist.utils.html  lifearchivist.utils.logging.html  modules.html
desktop/: .prettierignore  LINTING.md  eslint.config.js  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
development/: architecture.html  contributing.html  setup.html  testing.html
docs/: Makefile  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: lifearchivist.agents.rst  lifearchivist.models.rst  lifearchivist.server.api.routes.rst  lifearchivist.server.api.rst  lifearchivist.server.rst  lifearchivist.storage.vault.rst  lifearchivist.tools.date_extract.rst  lifearchivist.tools.file_import.rst  lifearchivist.tools.ollama.rst  lifearchivist.tools.rst  lifearchivist.tools.search.rst  lifearchivist.utils.logging.rst  lifearchivist.utils.rst  modules.rst  server.rst  storage.rst  tools.rst
docs/development/: architecture.rst  contributing.rst  setup.rst  testing.rst
docs/usage/: file-management.rst
lifearchivist/: __init__.py
lifearchivist/agents/: __init__.py  ingestion.py  query.py
lifearchivist/config/: __init__.py  settings.py
lifearchivist/llm/: USAGE_EXAMPLE.md  __init__.py  base_provider.py  constants.py  cost_tracker.py  exceptions.py  provider_config.py  provider_factory.py  provider_health_monitor.py  provider_loader.py  provider_manager.py  provider_metadata.py  provider_registry.py  provider_router.py
lifearchivist/models/: __init__.py  core.py  folder_watch.py
lifearchivist/rag/: __init__.py  prompts.py  service.py  types.py
lifearchivist/schemas/: tool_schemas.py
lifearchivist/server/: __init__.py  activity_manager.py  application_server.py  background_tasks.py  enrichment_queue.py  main.py  mcp_server.py  progress_manager.py  service_container.py
lifearchivist/storage/: __init__.py  bm25_index_service.py  credential_service.py  document_service.py  document_tracker.py  folder_watcher.py  metadata_service.py  query_service.py  redis_document_tracker.py  redis_folder_watch_store.py  search_service.py  utils.py  vault_reconciliation.py
lifearchivist/tools/: __init__.py  base.py  exceptions.py  registry.py
lifearchivist/utils/: __init__.py  result.py
lifearchivist/workers/: __init__.py  enrichment_worker.py
tests/: README.md  __init__.py  base.py  conftest.py  test_fixtures_basic.py  test_llamaindex_service.py
tests/examples/: __init__.py  test_document_lifecycle_demo.py
tests/factories/: __init__.py  document_factory.py  file_factory.py  metadata_factory.py  request_factory.py  response_factory.py
tests/fixtures/: __init__.py  document_lifecycle.py
tests/mocks/: __init__.py  background.py  llm.py  messaging.py  mock_llamaindex.py  server.py  services.py  storage.py
tests/routes/: __init__.py  test_conversations_routes.py  test_documents.py  test_documents_routes.py  test_enrichment_routes.py  test_folder_watch_routes.py  test_health.py  test_providers_routes.py  test_search.py  test_search_populated.py  test_search_routes.py  test_settings_routes.py  test_tags_routes.py  test_timeline_routes.py  (+3 more)
usage/: ai-features.html  file-management.html  overview.html  search.html
(+376 files in other folders)
